[devpi:upload]
formats = sdist.tgz,bdist_wheel


[metadata]
name = devpi-tokens
description = "devpi-tokens: add support for constrained access tokens to devpi-client and devpi-server"
long_description = file: README.rst, CHANGELOG.short.rst
version = attr: devpi_tokens.__version__
author = Florian Schulze and Contributors
author_email = mail@florian-schulze.net
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages = devpi_tokens
package_dir =
    = src
include_package_data = True
install_requires =
    pymacaroons
python_requires = >=3.6
zip_safe = True


[options.extras_require]
client =
    delta
    devpi-client>=4.3.0
server =
    devpi-server>=6.1.0


[options.entry_points]
devpi_client =
    devpi-tokens = devpi_tokens.client
devpi_server =
    devpi-tokens = devpi_tokens.server
